finally a better nav. solved center align and hamburger align issues

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
     padding: 0;
 }
 
+navbar{
+    position: relative;
+}
+
 body::after {
     background-color: #fff;
     opacity: 0.1;
@@ -48,6 +52,11 @@ h1{
 
 .card-shadow{
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
+}
+
+a{
+    color: gray;
+    font-family: 'Raleway', sans-serif;
 }
 
 .propic{
